bug fix overflow

--- a/sass/_transaksi.sass
+++ b/sass/_transaksi.sass
@@ -14,7 +14,6 @@
   .media
     .media-left
       .image
-        overflow: hidden
         &.xs
           +size(30px, 30px)
         &.sm
